--- a/css/styles.css
+++ b/css/styles.css
@@ -4334,7 +4334,7 @@ input[type=button].btn-block {
 
 .card {
   position: relative;
-  display: flex;
+  display: inline-block;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
